--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ dist
 
 #Исключения
 !.gitignore
+.gradle/7.5.1/executionHistory/executionHistory.bin
+*.bin
+.gradle/7.5.1/executionHistory/executionHistory.lock
+*.bin
+*.bin
